# biometrico

./: .gitignore  .opencodeignore  00_marimo_scratch.py  AGENTS.md  README.md  df_final.pkl  opencode.json  pyproject.toml
layouts/: 00_marimo_scratch.grid.json
src/biometrico/: biometricoDB.py  ingestion.py  justificar.py
xlsx_templates/: plantilla_marcaciones.xlsx
