[project]
name = "biometrico"
version = "0.1.0"
description = "System for processing PDF tables for -Control de Asistencia- "
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deltalake==1.4.2",
    "duckdb==1.5.4",
    "gdrive-utils",
    "gspread==6.2.1",
    "ibis-framework[duckdb]>=12.0.0",
    "marimo>=0.23.14",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "pyarrow==25.0.0",
    "pymongo==4.17.0",
    "pymupdf==1.28.0",
    "pypst==0.8.0",
    "python-dotenv==1.2.2",
    "typst==0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
gdrive-utils = { git = "https://github.com/ernestopalacios/gdrive-utils.git" }

[tool.hatch.build.targets.wheel]
packages = ["src/biometrico"] # Cambia "biometrico" por el nombre real de tu carpeta de código
